changed string formatting